# status-crew

./: README.md  example.env  pyproject.toml
src/status_crew/: crew.py  main.py
src/temp/: crew.py  main.py
