[project]
name = "status-crew"
version = "0.1.0"
description = "Using CrewAI and Swirl to create status reports"
authors = [{ name = "Michael Cizmar", email = "michael.cizmar@mcplusa.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
temp = "temp.main:run"
run_crew = "temp.main:run"
train = "temp.main:train"
replay = "temp.main:replay"
test = "temp.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
